infra/k8s/prod/agent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  labels:
    app: agent
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
        env: prod
    spec:
      containers:
        - name: agent
          image: docker.io/sleemaneketeh/agent:8c8a036b1b9ab3ec4e3bc16fb51f6003c99c076b
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
